# SecBrain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
secbrain/: CLAUDE.md  __init__.py  cli.py  client.py  config.py  deploy.py  hooks.py  inject.py  server.py  wizard.py
